test/Fail/Issue3590-1.err
Termination checking mutual block 0
Issue3590-1.agda:24.7-10: error: [UnequalSorts]
Set₁ != Set
when checking that the expression Set has type Set
